# DTS-validator

./: .gitignore  Makefile  NOTES.md  README.md  TODOs.md  pyproject.toml
.github/workflows/: dracor.yml  main.yml  ubhd.yml
dts_validator/: __init__.py  cli.py  client.py  exceptions.py  validation.py
reports/: dracor_all_report.html  dracor_collection_report.html  dracor_document_report.html  dracor_entry_report.html  dracor_navigation_report.html  dracor_report.html  ftsr_collection_report.html  ftsr_document_report.html  ftsr_entry_report.html  ftsr_report.html  rd_ftsr_report.html  report-collection.html  report-entry.html  report-navigation.html  report.html  ubhd_all_report.html  ubhd_collection_report.html  ubhd_document_report.html  ubhd_entry_report.html  ubhd_navigation_report.html
schemas/: citable_unit.schema.json  collection_response.schema.json  entry_response.schema.json  navigation_response.schema.json  resource.schema.json
tests/: conftest.py  test_collection_endpoint.py  test_document_endpoint.py  test_entry_endpoint.py  test_navigation_endpoint.py
tests/data/: collection_docs_response_one.json  collection_docs_response_readable.json  collection_docs_response_root.json  old_entry_response.json
tests/data/collection/: collection_docs_response_one.json  collection_docs_response_readable.json  collection_docs_response_root.json
tests/data/entry/: entry_docs_response.json
tests/data/navigation/: navigation_docs_response_down_one.json  navigation_docs_response_down_two.json  navigation_docs_response_low_ref_down_one.json  (+3 more)
