[tool.poetry]
name = "dts-validator"
version = "0.1.0"
description = "DTS validator: a suite of tests for testing & validating implementations of the DTS API"
authors = ["Matteo Romanello <matteo.romanello@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.1"
pytest-html = "^4.1.1"
requests = "^2.32.2"
jsonschema = "^4.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"